crates/ink/tests/ui/contract/fail/trait-message-payable-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait-message-payable-mismatch.rs:23:9
   |
23 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `false`, found `true`
   |
   = note: expected struct `TraitMessagePayable<false>`
              found struct `TraitMessagePayable<true>`
